--- a/src/app/components/horizontal-scroll-cards/horizontal-scroll-cards.component.html
+++ b/src/app/components/horizontal-scroll-cards/horizontal-scroll-cards.component.html
@@ -4,6 +4,7 @@
     <div *ngFor="let gasStation of gasStations">
       <app-gas-station-card-small
         [gasStation]="gasStation"
+        [location]="location"
       ></app-gas-station-card-small>
     </div>
   </div>
