--- a/src/app/components/tabs/tabs.page.html
+++ b/src/app/components/tabs/tabs.page.html
@@ -1,6 +1,6 @@
 <ion-tabs>
 
-  <ion-tab-bar slot="bottom">
+<!--<ion-tab-bar slot="bottom">
     <ion-tab-button tab="home">
       <ion-icon aria-hidden="true" name="triangle"></ion-icon>
       <ion-label>Home</ion-label>
@@ -10,6 +10,6 @@
       <ion-icon aria-hidden="true" name="ellipse"></ion-icon>
       <ion-label>Explore</ion-label>
     </ion-tab-button>
-  </ion-tab-bar>
+  </ion-tab-bar>-->
 
 </ion-tabs>
