--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -11,16 +11,19 @@
     <app-horizontal-scroll-cards
       [sectionTitle]='"Mais Baratas Perto de ti"'
       [gasStations]="nearCheapStations"
+      [location]="myLocation"
     >
     </app-horizontal-scroll-cards>
     <app-horizontal-scroll-cards
       [sectionTitle]='"Mais Perto"'
       [gasStations]="nearGasStations"
+      [location]="myLocation"
     >
     </app-horizontal-scroll-cards>
     <app-horizontal-scroll-cards
       [sectionTitle]='"Mais Baratas"'
       [gasStations]="topGasStations"
+      [location]="myLocation"
     >
     </app-horizontal-scroll-cards>
   </div>
