--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,7 +1,11 @@
-ion-header{
+ion-header {
   margin-top: 25px;
 }
 
-.home-body{
+.home-body {
   margin-top: 25px;
+}
+
+ion-item{
+  font-size: 25px;
 }
