--- a/src/app/components/gas-station-card-small/gas-station-card-small.component.scss
+++ b/src/app/components/gas-station-card-small/gas-station-card-small.component.scss
@@ -15,14 +15,19 @@ ion-card {
   margin-left: 0;
 }
 
-.station-logo {
-  width: 50px;
-}
-
 ion-col {
   padding: 0;
+  display: flex;
 }
 
 ion-card-subtitle {
   margin: 0;
+}
+
+ion-col img {
+  max-height: 90%;
+  max-width: 90%;
+  display: flex;
+  margin: auto;
+  justify-self: left;
 }
