now opens location in map

--- a/src/app/components/gas-station-card-small/gas-station-card-small.component.html
+++ b/src/app/components/gas-station-card-small/gas-station-card-small.component.html
@@ -1,4 +1,6 @@
-<ion-card>
+<ion-card
+  (click)="openMapsApp([gasStation['Latitude'], gasStation['Longitude']])"
+>
   <ion-card-header>
     <ion-card-subtitle>{{ gasStation["Nome"] }}</ion-card-subtitle>
     <ion-card-title>
